{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 142,
  "lineage": "e0308fbe-d81b-6f12-61d0-3f7e08e1d942",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:325583868777:loadbalancer/app/alb-web/674f36844038d372",
            "arn_suffix": "app/alb-web/674f36844038d372",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-web-1412017653.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:325583868777:loadbalancer/app/alb-web/674f36844038d372",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0420fd05cffbcdc7b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05db95070af9a11c5"
              },
              {
                "subnet_id": "subnet-0a39b7f81f64e3d59"
              }
            ],
            "subnets": [
              "subnet-05db95070af9a11c5",
              "subnet-0a39b7f81f64e3d59"
            ],
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "alb-web",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "alb-web",
              "Periodo": "8"
            },
            "vpc_id": "vpc-0f828abc85e713356",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:325583868777:listener/app/alb-web/674f36844038d372/84d642faddac4b41",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:325583868777:targetgroup/tg-web/e5e8f78f07281a2b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:325583868777:listener/app/alb-web/674f36844038d372/84d642faddac4b41",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:325583868777:loadbalancer/app/alb-web/674f36844038d372",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.application_lb",
            "module.alb.aws_lb_target_group.web_tg",
            "module.security_groups.aws_security_group.alb_sg",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:325583868777:targetgroup/tg-web/e5e8f78f07281a2b",
            "arn_suffix": "targetgroup/tg-web/e5e8f78f07281a2b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:325583868777:targetgroup/tg-web/e5e8f78f07281a2b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "tg-web",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "tg-web",
              "Periodo": "8"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:security-group/sg-0420fd05cffbcdc7b",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0420fd05cffbcdc7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "325583868777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "alb-sg",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "alb-sg",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:security-group/sg-0d96d58b254f509ab",
            "description": "Security Group for private EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d96d58b254f509ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f0fa6590ce645b4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-ec2-sg",
            "name_prefix": "",
            "owner_id": "325583868777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "private-ec2-sg",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "private-ec2-sg",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.public_ec2_sg",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:security-group/sg-04f0fa6590ce645b4",
            "description": "Security Group for public EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f0fa6590ce645b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-ec2-sg",
            "name_prefix": "",
            "owner_id": "325583868777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "public-ec2-sg",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "public-ec2-sg",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:security-group/sg-0eccd3b6b92cd20f8",
            "description": "Security Group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eccd3b6b92cd20f8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d96d58b254f509ab"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "325583868777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "rds-sg",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "rds-sg",
              "Periodo": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_ec2_sg",
            "module.security_groups.aws_security_group.public_ec2_sg",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:internet-gateway/igw-0f93eaba111a117c3",
            "id": "igw-0f93eaba111a117c3",
            "owner_id": "325583868777",
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "main-internet-gateway",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "main-internet-gateway",
              "Periodo": "8"
            },
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f93eaba111a117c3",
            "id": "r-rtb-05bae87d5a21da2ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05bae87d5a21da2ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_internet_gateway.igw",
            "module.subnet.aws_route_table.public_rt",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:route-table/rtb-05bae87d5a21da2ce",
            "id": "rtb-05bae87d5a21da2ce",
            "owner_id": "325583868777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f93eaba111a117c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04444211c12315f8f",
            "route_table_id": "rtb-05bae87d5a21da2ce",
            "subnet_id": "subnet-05db95070af9a11c5"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe5666c08c67dac1",
            "route_table_id": "rtb-05bae87d5a21da2ce",
            "subnet_id": "subnet-0a39b7f81f64e3d59"
          },
          "dependencies": [
            "module.subnet.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:subnet/subnet-0b5c9a870a40377b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5c9a870a40377b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325583868777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "private-subnet-1-gcs-dcmr",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "private-subnet-1-gcs-dcmr",
              "Periodo": "8"
            },
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:subnet/subnet-0e694786fb6090c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e694786fb6090c2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325583868777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "private-subnet-2-gcs-dcmr",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "private-subnet-2-gcs-dcmr",
              "Periodo": "8"
            },
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:subnet/subnet-05db95070af9a11c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05db95070af9a11c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325583868777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "public-subnet-1-gcs-dcmr",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "public-subnet-1-gcs-dcmr",
              "Periodo": "8"
            },
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:subnet/subnet-0a39b7f81f64e3d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.31.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a39b7f81f64e3d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325583868777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "public-subnet-2-gcs-dcmr",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "public-subnet-2-gcs-dcmr",
              "Periodo": "8"
            },
            "vpc_id": "vpc-0f828abc85e713356"
          },
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:325583868777:vpc/vpc-0f828abc85e713356",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0eda71d72c48a627d",
            "default_route_table_id": "rtb-0d87f213a560d2ff9",
            "default_security_group_id": "sg-0f9b83a9e1ca92a2c",
            "dhcp_options_id": "dopt-25a0734e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f828abc85e713356",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d87f213a560d2ff9",
            "owner_id": "325583868777",
            "tags": {
              "Aluno": "gcs-dcmr",
              "Name": "vpc-gcs-dcmr",
              "Periodo": "8"
            },
            "tags_all": {
              "Aluno": "gcs-dcmr",
              "Name": "vpc-gcs-dcmr",
              "Periodo": "8"
            }
          }
        }
      ]
    }
  ]
}